# safe-app-law-gazelle

./: .gitignore  README.md  backfill_from_willow.py  client_profile.py  legal_db.py  pyproject.toml  safe-app-manifest.json  safe_integration.py
src/: gazelle_engine.py  safe_integration.py
