[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-app-law-gazelle"
version = "1.0.0"
description = "Legal reference tool — statute search, case summaries, plain-language explainers from verified sources."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]
